--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 640px;
-    gap:3em;
+    gap:2.7em;
 
     .left{
         padding: 4.3em 0 0 2.6em;
@@ -58,7 +58,7 @@
                 outline: none;
                 border-radius: 10px;
                 padding-block: 1.1em;
-                padding-inline: 2em;
+                // padding-inline: 2em;
                 font-family: 'regular';
                 font-size: 1em;
                 margin-bottom: 1.4em;
@@ -77,7 +77,7 @@
                 border: none;
                 border-radius: 10px;
                 color: c.$White;
-                padding-block: 1.2em;
+                padding-block: 1.22em;
                 font-family: 'bold';
                 font-size: 1em;
                 // padding-top: ;
@@ -85,9 +85,11 @@
             }
     }
     .right{
+        width: 400px;
         background: url("../assets/images/illustration-sign-up-desktop.svg");
         border-radius: 15px;
-        background-size: contain;
+        background-size: cover;
+       margin-left: 20px;
         background-repeat: no-repeat;
     }
 }
