--- a/scss/partials/_config.scss
+++ b/scss/partials/_config.scss
@@ -1,4 +1,5 @@
 @use "./colors" as c;
+@use "./mixins"  as *;
 
 *{
     margin: 0;
@@ -14,4 +15,10 @@
     max-width: 1440px;
     height: 100%;
     padding-block: 13.7rem;
+
+    @include responsive(375px){
+        width: 100%;
+        background: c.$White;
+        padding: 0;
+    }
 }
