--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,7 @@
        padding: 0;
        gap: 2.3em;
        height: fit-content;
+       padding-bottom: 1.5em;
          
 
     }
@@ -67,10 +68,20 @@
                 display: flex;
                 flex-direction: row;
                 gap:15px;
+                align-items: center;
                 font-family: 'regular';
                 padding-bottom: .9em;
+                position: relative;
 
-            @include 
+            @include responsive(375px){
+                line-height: 1.35;
+                gap: 17px;
+
+                .top{
+                    position: relative;
+                    top:-11px;
+                }
+            }
             }
          } 
          form{ 
@@ -81,13 +92,19 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
-             padding-bottom: .9em;
+                 padding-bottom: .9em;
+                 @include responsive(375px){
+                    padding-bottom: .7em;
+                 }
 
                 label {
                     font-family: 'bold';
                     font-weight: 700;
                     font-size: .75em;
                     color: c.$DarkSlateGrey;
+                    @include responsive(375px){
+                        font-size: .77em;
+                    }
                 }
                 #error{
                     color: c.$Tomato;
@@ -103,6 +120,10 @@
                 font-family: 'regular';
                 font-size: 1em;
                 margin-bottom: 1.4em;
+                @include responsive(375px) {
+                padding-inline: 1.5em;
+
+                }
 
                 &::placeholder{
                     font-family: 'regular';
@@ -171,6 +192,11 @@
     display: flex;
     flex-direction: column;
     padding: 3.1em 3.9em 3.9em;
+    @include responsive(375px){
+        padding: 0;
+        width: 88%;
+        padding-top: 5.5em;
+    }
 
 
     .img{
@@ -189,6 +215,11 @@
         color: c.$DarkSlateGrey;
         padding-top: .69em;
         line-height: 1.05;
+        // include
+        @include responsive(375px){
+            font-size: 2.5em;
+            padding-top: 1em;
+        }
       
     }
     p{
@@ -197,6 +228,10 @@
         padding-top: 1.49em;
         line-height: 1.42;
         padding-bottom: 2.6em;
+        @include responsive(375px){
+            line-height: 1.44;
+            padding-top: 1.47;
+        }
 
         span{
             font-family: 'bold';
@@ -217,6 +252,9 @@
         &:hover{
             background: c.$Tomato;
             transition: .5s background;
+        }
+        @include responsive(375px){
+            display: none;
         }
     }
 }
