--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,7 +14,7 @@
     height: 640px;
     gap:2.7em;
 
-    @include responsive(375px){
+    @include responsive(450px){
        display: flex;
        width: 100%;
        flex-direction: column-reverse;
@@ -25,28 +25,43 @@
          
 
     }
+    @include responsive(850px){
+        width: 90%;
+        margin-inline: auto;
+        height: fit-content;
+    }
 
     .left{
         padding: 4.3em 0 0 2.6em;
         width: 100%;
         // include
 
-        @include responsive(375px){
+        @include responsive(450px){
             margin-inline: auto;
             padding: 0;
             margin-bottom: 2.7em;
             width: 88%;
 
         }
+
+        @include responsive(850px){
+            width: 100%;
+            margin-inline: auto;
+            padding: 0;
+            // margin-bottom: 2.7em;
+        }
         h1{
             font-family: 'bold' ;
             font-size: 3.5em;
             color: c.$DarkSlateGrey;
             margin-bottom: .38em;
-            @include responsive(375px){
+            @include responsive(450px){
                 font-size: 2.5em;
                 margin-bottom: .5em;
             }
+             @include responsive(850px) {
+                font-size: 3em;
+             }
         }
          p{
             font-family: 'regular';
@@ -55,7 +70,7 @@
             color: c.$CharcoalGrey;
             font-weight: 500;
             padding-bottom: 1.6em;
-            @include responsive(375px){
+            @include responsive(450px){
                 line-height: 1.5;
                 // padding-bottom: em;
 
@@ -73,7 +88,7 @@
                 padding-bottom: .9em;
                 position: relative;
 
-            @include responsive(375px){
+            @include responsive(450px){
                 line-height: 1.35;
                 gap: 17px;
 
@@ -93,7 +108,7 @@
                 flex-direction: row;
                 justify-content: space-between;
                  padding-bottom: .9em;
-                 @include responsive(375px){
+                 @include responsive(450px){
                     padding-bottom: .7em;
                  }
 
@@ -102,7 +117,7 @@
                     font-weight: 700;
                     font-size: .75em;
                     color: c.$DarkSlateGrey;
-                    @include responsive(375px){
+                    @include responsive(450px){
                         font-size: .77em;
                     }
                 }
@@ -120,7 +135,7 @@
                 font-family: 'regular';
                 font-size: 1em;
                 margin-bottom: 1.4em;
-                @include responsive(375px) {
+                @include responsive(450px) {
                 padding-inline: 1.5em;
 
                 }
@@ -164,10 +179,10 @@
         width: 400px;
         background: url("../assets/images/illustration-sign-up-desktop.svg");
         border-radius: 15px;
-        background-size: cover;
+        background-size: contain;
         margin-left: 20px;
         background-repeat: no-repeat;
-        @include responsive(375px){
+        @include responsive(450px){
             width: 100%;
             margin: 0;
             height: 284px;
@@ -179,6 +194,11 @@
             border-bottom-right-radius: 20px;
 
         }
+         @include responsive(850px) {
+            width: 100%;
+            // height: 593px;
+            margin-inline: auto;
+         }
        
     }
 }
@@ -192,7 +212,7 @@
     display: flex;
     flex-direction: column;
     padding: 3.1em 3.9em 3.9em;
-    @include responsive(375px){
+    @include responsive(450px){
         padding: 0;
         width: 88%;
         padding-top: 5.5em;
@@ -216,7 +236,7 @@
         padding-top: .69em;
         line-height: 1.05;
         // include
-        @include responsive(375px){
+        @include responsive(450px){
             font-size: 2.5em;
             padding-top: 1em;
         }
@@ -228,7 +248,7 @@
         padding-top: 1.49em;
         line-height: 1.42;
         padding-bottom: 2.6em;
-        @include responsive(375px){
+        @include responsive(450px){
             line-height: 1.44;
             padding-top: 1.47;
         }
@@ -253,7 +273,7 @@
             background: c.$Tomato;
             transition: .5s background;
         }
-        @include responsive(375px){
+        @include responsive(450px){
             display: none;
         }
     }
