--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,7 @@
 
     }
     @include responsive(850px){
-        width: 90%;
+        // width: 90%;
         margin-inline: auto;
         height: fit-content;
     }
@@ -45,7 +45,7 @@
         }
 
         @include responsive(850px){
-            width: 100%;
+            // width: 100%;
             margin-inline: auto;
             padding: 0;
             // margin-bottom: 2.7em;
