--- a/css/main.css
+++ b/css/main.css
@@ -210,8 +210,9 @@
   width: 400px;
   background: url("../assets/images/illustration-sign-up-desktop.svg");
   border-radius: 15px;
-  background-size: contain;
+  background-size: cover;
   margin-left: 20px;
+  background-position: center;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 450px) {
@@ -234,7 +235,7 @@
   }
 }
 
-.sucess {
+.container .sucess {
   background: hsl(0, 0%, 100%);
   width: 500px;
   margin-inline: auto;
@@ -245,13 +246,13 @@
   padding: 3.1em 3.9em 3.9em;
 }
 @media screen and (max-width: 450px) {
-  .sucess {
+  .container .sucess {
     padding: 0;
     width: 88%;
     padding-top: 5.5em;
   }
 }
-.sucess .img {
+.container .sucess .img {
   width: 63px;
   height: 63px;
   background: url("../assets/images/icon-success.svg");
@@ -259,7 +260,7 @@
   background-size: contain;
   background-position: center;
 }
-.sucess h1 {
+.container .sucess h1 {
   font-family: "bold";
   font-size: 3.47em;
   color: hsl(234, 29%, 20%);
@@ -267,12 +268,12 @@
   line-height: 1.05;
 }
 @media screen and (max-width: 450px) {
-  .sucess h1 {
+  .container .sucess h1 {
     font-size: 2.5em;
     padding-top: 1em;
   }
 }
-.sucess p {
+.container .sucess p {
   font-family: "regular";
   font-size: 1em;
   padding-top: 1.49em;
@@ -280,17 +281,17 @@
   padding-bottom: 2.6em;
 }
 @media screen and (max-width: 450px) {
-  .sucess p {
+  .container .sucess p {
     line-height: 1.44;
     padding-top: 1.47;
   }
 }
-.sucess p span {
+.container .sucess p span {
   font-family: "bold";
   font-size: 1em;
   color: hsl(234, 29%, 20%);
 }
-.sucess button {
+.container .sucess button {
   border: none;
   background: hsl(234, 29%, 20%);
   color: hsl(0, 0%, 100%);
@@ -300,16 +301,24 @@
   padding-block: 1.19em;
   cursor: pointer;
 }
-.sucess button:hover {
+.container .sucess button:hover {
   background: hsl(4, 100%, 67%);
   transition: 0.5s background;
 }
 @media screen and (max-width: 450px) {
-  .sucess button {
+  .container .sucess button {
     display: none;
   }
 }
+.container .sim {
+  display: none;
+}
 
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 10%;
+}
 footer .attribution {
   font-size: 11px;
   text-align: center;
