--- a/scss/main.scss
+++ b/scss/main.scss
@@ -179,8 +179,9 @@
         width: 400px;
         background: url("../assets/images/illustration-sign-up-desktop.svg");
         border-radius: 15px;
-        background-size: contain;
+        background-size: cover;
         margin-left: 20px;
+        background-position: center;
         background-repeat: no-repeat;
         @include responsive(450px){
             width: 100%;
@@ -203,82 +204,100 @@
     }
 }
 
-.sucess{
-    background: c.$White;
-    width: 500px;
-    margin-inline: auto;
-    border-radius: 30px;
-    margin-top: 3.75rem;
-    display: flex;
-    flex-direction: column;
-    padding: 3.1em 3.9em 3.9em;
-    @include responsive(450px){
-        padding: 0;
-        width: 88%;
-        padding-top: 5.5em;
-    }
+.container{
+   
+    .sucess {
+        
+        background: c.$White;
+        width: 500px;
+        margin-inline: auto;
+        border-radius: 30px;
+        margin-top: 3.75rem;
+        display: flex;
+        flex-direction: column;
+        padding: 3.1em 3.9em 3.9em;
 
-
-    .img{
-        $siz:63px;
-        width: $siz;
-        height:$siz;
-        background: url("../assets/images/icon-success.svg");
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center;
-    }
-    h1{
-        font-family: 'bold';
-        font-size: 3.47em;
-        // margin-left: -2px;
-        color: c.$DarkSlateGrey;
-        padding-top: .69em;
-        line-height: 1.05;
-        // include
-        @include responsive(450px){
-            font-size: 2.5em;
-            padding-top: 1em;
-        }
-      
-    }
-    p{
-        font-family: 'regular';
-        font-size: 1em;
-        padding-top: 1.49em;
-        line-height: 1.42;
-        padding-bottom: 2.6em;
-        @include responsive(450px){
-            line-height: 1.44;
-            padding-top: 1.47;
+        @include responsive(450px) {
+            padding: 0;
+            width: 88%;
+            padding-top: 5.5em;
         }
 
-        span{
+
+        .img {
+            $siz: 63px;
+            width: $siz;
+            height: $siz;
+            background: url("../assets/images/icon-success.svg");
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+        }
+
+        h1 {
             font-family: 'bold';
-            font-size: 1em;
+            font-size: 3.47em;
+            // margin-left: -2px;
             color: c.$DarkSlateGrey;
+            padding-top: .69em;
+            line-height: 1.05;
+
+            // include
+            @include responsive(450px) {
+                font-size: 2.5em;
+                padding-top: 1em;
+            }
 
         }
-    }
-    button{
-        border:  none;
-        background: c.$DarkSlateGrey;
-        color: c.$White;
-        font-size: 1em;
-        font-family: 'bold';
-        border-radius: 10px;
-        padding-block: 1.19em;
-        cursor: pointer;
-        &:hover{
-            background: c.$Tomato;
-            transition: .5s background;
+
+        p {
+            font-family: 'regular';
+            font-size: 1em;
+            padding-top: 1.49em;
+            line-height: 1.42;
+            padding-bottom: 2.6em;
+
+            @include responsive(450px) {
+                line-height: 1.44;
+                padding-top: 1.47;
+            }
+
+            span {
+                font-family: 'bold';
+                font-size: 1em;
+                color: c.$DarkSlateGrey;
+
+            }
         }
-        @include responsive(450px){
-            display: none;
+
+        button {
+            border: none;
+            background: c.$DarkSlateGrey;
+            color: c.$White;
+            font-size: 1em;
+            font-family: 'bold';
+            border-radius: 10px;
+            padding-block: 1.19em;
+            cursor: pointer;
+
+            &:hover {
+                background: c.$Tomato;
+                transition: .5s background;
+            }
+
+            @include responsive(450px) {
+                display: none;
+            }
         }
     }
+     .sim {
+         display: none;
+     }
 }
 footer{
+    position: fixed;
+    bottom: 0;
+    left:10%;
     .attribution {
         font-size: 11px;
         text-align: center;
